--- a/stylesheet/carousel.css
+++ b/stylesheet/carousel.css
@@ -12,7 +12,7 @@
 }
 
 .portfolio_images{
-  width: 81%;
+  width: 82%;
 	height: auto;
   margin: auto;
 }
@@ -23,7 +23,11 @@
   margin: auto;
 }
 
-
+.portfolio_images-mobile{
+  width: 70%;
+	height: auto;
+  margin: auto;
+}
 
 .headermred {
   width: 100%;
