--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -151,6 +151,13 @@
     /*margin-left: 7.25%;*/
     padding: 0px;
   }
+	
+ .carousel-inner.mobile{
+    width: auto;
+	  height: 95vh;
+    /*margin-left: 7.25%;*/
+    padding: 0px;
+  }
 
   .container_contacts{
     zoom: 85%;
