--- a/stylesheet/media_labtop_portfolio.css
+++ b/stylesheet/media_labtop_portfolio.css
@@ -285,7 +285,7 @@
     letter-spacing: .3;
     font-weight: bold;
     font-size: 4vw;
-	  font-color: #fff;
+	  font-color: #588a93;
 	display: inherit;
 
   }
