--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -31,7 +31,7 @@ h4 > a:active{
   /*opacity: .8;*/
   text-align: center;
   font-size: 2vw;
-  color: #fff;
+  color: ivory;
   font-family: 'Lato', sans-serif;
 	src: url("~/fonts/Lato-Bol.ttf");
   text-decoration: none;
@@ -49,7 +49,7 @@ h4.email a{
 h4 a:hover,
 h4:hover{
   color: white;
-  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FC9C54, 0 0 30px #FC9C54, 0 0 40px #FC9C54, 0 0 50px #FC9C54, 0 0 75px #FC9C54;
   z-index: 1000;
 }
 
@@ -67,15 +67,15 @@ h4:hover{
 .flicker >a:link,
 .flicker >a:active{
   color: none;
-  -webkit-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
-  -moz-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
-  -ms-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
-  -o-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
-  text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
+  -webkit-text-shadow: 0 0 5px #ffe2d1, 0 0 10px #fa9d66, 0 0 15px #fa9d66, 0 0 20px #fa9d66, 0 0 30px #fa9d66, 0 0 40px #fa9d66;
+  -moz-text-shadow: 0 0 5px #ffe2d1, 0 0 10px #fa9d66, 0 0 15px #fa9d66, 0 0 20px #fa9d66, 0 0 30px #fa9d66, 0 0 40px #fa9d66;
+  -ms-text-shadow: 0 0 5px #ffe2d1, 0 0 10px #fa9d66, 0 0 15px #fa9d66, 0 0 20px #fa9d66, 0 0 30px #fa9d66, 0 0 40px #fa9d66;
+  -o-text-shadow: 0 0 5px #ffe2d1, 0 0 10px #fa9d66, 0 0 15px #fa9d66, 0 0 20px #fa9d66, 0 0 30px #fa9d66, 0 0 40px #fa9d66;
+  text-shadow: 0 0 5px #ffe2d1, 0 0 10px #fa9d66, 0 0 15px #fa9d66, 0 0 20px #fa9d66, 0 0 30px #fa9d66, 0 0 40px #fa9d66;
 }
 
 h4.linkedin a:hover {
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FC9C54, 0 0 30px #FC9C54, 0 0 40px #FC9C54, 0 0 50px #FC9C54, 0 0 75px #FC9C54;
     transition: all .1s ease-in-out;
 }
 
