--- a/stylesheet/contact_portfolio-coding.css
+++ b/stylesheet/contact_portfolio-coding.css
@@ -6,7 +6,7 @@
 .email{
     color: white;
     font-family: 'Lato', sans-serif;
-  src: url("~/fonts/Lato-Bol.ttf");
+    src: url("~/fonts/Lato-Bol.ttf");
     text-transform: lowercase;
   }
 
@@ -15,10 +15,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  vertical-align: middle;
+  vertical-align: bottom;
   width: 100%;
   height: 100px;
-  margin-top: -15%;
+  margin-top: 0;
   zoom: 75%;
 }
 
@@ -33,13 +33,14 @@ h4 > a:active{
   font-size: 1.2vw;
   color: ivory;
   font-family: 'Lato', sans-serif;
-	src: url("~/fonts/Lato-Bol.ttf");
+  src: url("~/fonts/Lato-Bol.ttf");
   text-decoration: none;
   transition: all ease-in-out;
   float: left;
-  padding: 140px 70px 20px 50px;
+  padding: 10px 70px 20px 50px;
   opacity: 1;
   text-transform: lowercase;
+	
 }
 
 h4.email a{
