--- a/stylesheet/contact_portfolio-coding.css
+++ b/stylesheet/contact_portfolio-coding.css
@@ -88,9 +88,10 @@ h4.facebook a:hover {
 .img_contact{
   position: absolute;
   z-index: 0;
-  opacity: 1;
-  bottom: 0%;
-  width: 100vw;
+  opacity: .08;
+  bottom: 0;
+	right: 0;
+  width: 20vw;
   height: auto;
 }
 
@@ -108,7 +109,7 @@ h4.facebook a:hover {
     font-weight: bold;
     font-size: 2vw;
     position: fixed;
-    bottom: 3%;
+    bottom: 7%;
     right: 5%;
     z-index: 8000;
     text-shadow: 0 0 3px black;
