--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -2,8 +2,9 @@
   display: none;
 }
 
-.portfolio_images {
-	display: inherit;
+img.portfolio_images {
+	width: 45%;
+	height: auto;
 }
 
 .portfolio_images-mobile {
@@ -201,7 +202,7 @@
 	
 	.portfolio_images {
 		display: inherit;
-		width: 45%;
+		width: auto;
 		height: auto;
 	}
 
