got ipad horizontal nut

--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -120,6 +120,14 @@ img.portfolio_images {
     width:100%;
   }
 
+	
+.img_plant{
+	  zoom: 80%;
+  }
+	
+.img_laptop{
+	  zoom: 75%;
+  }
 
 
   .hello{
@@ -251,6 +259,14 @@ img.portfolio_images {
   .col-md-10{
     width: 65%;
   }
+	
+.img_plant{
+	  zoom: 40%;
+  }
+	
+.img_laptop{
+	  zoom: 40%;
+  }
 
   p#hello{
     margin-top: 22%;
@@ -259,9 +275,9 @@ img.portfolio_images {
   }
 
   .i_believe{
-    padding-left: 55%;
+    padding-left: 1%;
     padding-right: 15%;
-    font-size: 1.5vw;
+    font-size: 2vw;
   }
 
 
