--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -137,6 +137,8 @@
 
 	.img_labtop{
 		zoom: 80%;
+		bottom: -20%;
+
 	}
 
   .medialabtopnone{
@@ -251,12 +253,36 @@
     padding-right: 10%;
   }
 
+	.img_plant{
+	  zoom: 40%;
+	}	
+	
+	.img_labtop {
+		zoom: 40%;
+	}
+	
   .i_believe{
-    padding-left: 55%;
+    padding-left: 5%;
     padding-right: 15%;
     font-size: 1.5vw;
   }
 
+.quote.embossed.container_two{
+    zoom: 180%;
+    padding-left: 15px;
+    padding-right: 15px;
+	  width: 100vw;
+	  height: 75vh;
+  }
+
+
+  .container_one.contactpage{
+    overflow: hidden;
+    display: block;
+	width: 100vw;
+	height: 75vh;	  
+  }
+	
 
   .container-fluid{
     padding-left: 0px;
@@ -313,7 +339,12 @@
   .ipad.displaynone{
     display: none;
   }
-
+	
+	.container_one.intro{
+		width: 100%;
+		height: 75vh;
+	}
+	
   div.img_relative.labtop{
     height: 140vh;
   }
@@ -334,7 +365,7 @@
 
   .i_believe{
     padding-top: 2%;
-    padding-left: 40%;
+    padding-left: 5%;
     padding-right:5%;
     padding-bottom: 5%;
     font-size: 2.5vw;
@@ -352,6 +383,8 @@
     zoom: 180%;
     padding-left: 15px;
     padding-right: 15px;
+	  width: 100vw;
+	  height: 75vh;
   }
 
 
@@ -359,7 +392,7 @@
     overflow: hidden;
     display: block;
 	width: 100vw;
-	height: 105vh;	  
+	height: 75vh;	  
   }
 
   .container-fluid.ninetywidth{
