--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -252,8 +252,17 @@
     padding-right: 10%;
   }
 
+	
+.img_labtop{
+		zoom: 50%;
+	}
+	
+.img_plant{
+		zoom: 50%;
+	}
+	
   .i_believe{
-    padding-left: 55%;
+    padding-left: 5%;
     padding-right: 15%;
     font-size: 1.5vw;
   }
@@ -333,7 +342,25 @@
     line-height: 1.25;
   }
 
-  .i_believe{
+.img_labtop{
+		zoom: 50%;
+	top: 50%;
+	}
+	
+.img_plant{
+		zoom: 50%;
+	left: 2%;
+	top: 2%
+	}
+
+	.resume_pdf{
+		width: 65%;
+			right: 1%;
+		float: right;
+	}
+
+	
+.i_believe{
     padding-top: 2%;
     padding-left: 40%;
     padding-right:5%;
