--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -87,7 +87,7 @@ h4.facebook a:hover {
 .img_contact{
   position: absolute;
   z-index: 0;
-  opacity: 1;
+  opacity: .8;
   bottom: 0%;
   width: 100vw;
   height: auto;
