--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -137,11 +137,11 @@
 
 	.img_labtop{
 		zoom: 80%;
-		bottom: -20%;
+		bottom: -15%;
 	}
 	
 	.img_plant{
-		zoom: 20%;
+		zoom: 80%;
 	}
 
   .medialabtopnone{
@@ -531,9 +531,8 @@
     animation: cloud2 100s linear;
 	}
 
-@keyframes cloud2{from {left: -67vw;} to {left: 100vw;}}
+@keyframes cloud2{0% {left: -67vw;} 100% {left: 100vw;}}
 @-webkit-keyframes cloud2{0% {left: -67vw;} 100% {left: 100vw;}}
-
 	
   .img_introcloud3{
     position: absolute;
@@ -545,6 +544,7 @@
     height: auto;
     animation: cloud3 500s linear;
   }
+
 
 	@keyframes cloud3{0% {right: 0%;} 100% {right: -100vw;}}
 
