--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -29,6 +29,13 @@ img.portfolio_images {
 .carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img
 {width: 60%; max-width: 60%}
 	
+	
+	.portfolio-nav	{
+		position: absolute;
+		right: 1%;
+		top: 25vh;
+	}
+	
   h1 a,
   h1 a:visited,
   h1 a:link,
