--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -32,7 +32,7 @@ img.portfolio_images {
 	
 	.portfolio-nav	{
 		position: absolute;
-		right: 1%;
+		right: 10vw;
 		top: 25vh;
 	}
 	
@@ -176,7 +176,7 @@ img.portfolio_images {
 
   .carousel-inner{
     width: auto;
-	  height: 65vh;
+	  height: 100%;
     /*margin-left: 7.25%;*/
     padding: 0px;
   }
@@ -249,7 +249,7 @@ img.portfolio_images {
 
 
 	.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img
-{width: 45%; max-width: 45%}
+{width: 50%; max-width: 50%}
 
 }
 
