--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -96,7 +96,7 @@ h4.facebook a:hover {
 .totop {
 	 padding: 5px 3px;
     background: none;
-    color: darkgrey;
+    color: #000;
     opacity: .5;
     font-family: 'Oswald', serif;
     letter-spacing: .2;
