--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -47,7 +47,7 @@ img.portfolio_images {
     opacity: 1;
     background-image: url(../images/fractal1.jpg);
     background-size: 100% 20vh;
-    -webkit-background-clip: text;
+    -webkit-background-clip: text;to
     background-clip: text;
     text-decoration: none;
     /*text-shadow: 0px 0px 50px #3a75bb;*/
@@ -494,7 +494,7 @@ img.portfolio_images {
    font-weight: bold;
 	  margin: inherit;
    font-size: 7vw;
-	  bottom:10%;
+	  bottom: 1%;
   }
 
 
@@ -518,7 +518,7 @@ img.portfolio_images {
 		.portfolio-nav	{
 		position: absolute;
 		left: 2%;
-		bottom: 12vh;
+		bottom: -5%;
 			top: auto;
 			z-index: 2000;
 	}
