--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -151,18 +151,30 @@ img.portfolio_images {
 	width: 65%;
 	}
 	
-  .hello{
-    margin-top: -7%;
-    padding-left: 10%;
-    padding-right:10%;
-	text-align: center
+	
+ .hello{ 
+  font-family: 'Lato', serif;
+  color: white;
+  font-size: 4vw;
+  text-shadow: 2px 2px 10px black;
+  font-style: italic;
+  margin-top: -7%;
+  padding-left: 10%;
+  padding-right:10%;
+  text-align: center;
+	 opacity: 1;
   }
 
   .i_believe{
-    padding-left: 20%;
-    padding-right:20%;
-    font-size: 1.25vw;
-    opacity: .7;
+  font-family: 'Lato', serif;
+  color: #fff;
+  font-size: 2vw;
+  letter-spacing: .1em;
+  line-height: 2;
+    padding-left: 10%;
+    padding-right:10%;
+    font-size: 2vw;
+    opacity: 1;
  }
 
 
@@ -310,7 +322,7 @@ img.portfolio_images {
 	  zoom: 50%;
   }
 
-  p#hello{
+ .hello{
     margin-top: 22%;
     padding-left: 10%;
     padding-right: 10%;
@@ -319,7 +331,7 @@ img.portfolio_images {
   .i_believe{
     padding-left: 1%;
     padding-right: 15%;
-    font-size: 2vw;
+    font-size: 1.5vw;
   }
 
 .resume_pdf {
