--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -37,21 +37,45 @@ img.portfolio_images {
 		bottom: auto;
 	}
 	
+	
+	.port-heading {
+		font-size:16pt;
+		font-weight: bold;
+		text-align: right;
+		font-family: 'Lato',sans-serif; 
+		padding: 20px 25px 20px; 
+		line-height: 1.25;
+		background-color: white;
+		color: #333333
+	}	
+	
+	
+	.sub-port-heading {
+		font-size:14pt; 
+		font-weight: normal;
+		text-align: right;
+		font-family: 'Lato', sans-serif; 
+		background-color: white;
+		color: #333333;
+		padding: 0px 20px;
+	}
+	
+	
+	
+	
   h1 a,
   h1 a:visited,
   h1 a:link,
-  h1 a:active{
-    /*color: white;*/
-    color: transparent;
+  h1 a:active {
+     color: transparent;
     text-shadow: none;
     opacity: 1;
     background-image: url(../images/fractal1.jpg);
     background-size: 100% 20vh;
-    -webkit-background-clip: text;to
+    -webkit-background-clip: text;
     background-clip: text;
     text-decoration: none;
-    /*text-shadow: 0px 0px 50px #3a75bb;*/
-    -webkit-transition: background-image 1s ease;
+     -webkit-transition: background-image 1s ease;
     -moz-transition: background-image 1s ease;
     -ms-transition: background-image 1s ease;
     -o-transition: background-image 1s ease;
@@ -411,6 +435,23 @@ img.portfolio_images {
 
 @media (max-width:768px){
 	
+	.port-heading{
+		font-size:14pt; 
+		font-weight: bold; 
+		text-align: left; 
+		font-family: 'Lato', sans-serif; 
+		padding: 20px 10px 20px;
+	}
+	
+	 .sub-port-heading {
+		font-size:12pt; 
+		font-weight: normal;
+		text-align: left;
+		font-family: 'Lato', sans-serif; 
+		background-color: white;
+		color: #333333;
+		padding: 0px 20px;
+	}
 
 	.portfolio_images {
 		display: none;
