--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -46,7 +46,7 @@ img.portfolio_images {
 		padding: 20px 25px 20px; 
 		line-height: 1.25;
 		background-color: white;
-		color: #333333
+		color: #333333;
 	}	
 	
 	
