--- a/stylesheet/media_labtop_portfolio-coding-html.css
+++ b/stylesheet/media_labtop_portfolio-coding-html.css
@@ -31,12 +31,59 @@ img.portfolio_images {
 	}
 	
 
-.portfolio-nav	{
+	.nav-sub-html {
+		font-size: 12pt; 
+		font-family: 'Lato', sans-serif; 
+		index: 1000; 
+		padding-top: 10px; 
+		padding-left: 15px;
+	}
+	
+	.portfolio-nav	{
 		position: absolute;
 		right: 3%;
 		top: 25vh;
-}
+		bottom: auto;
+	}
 	
+	
+	
+	.nav-title{
+		color: black; 
+		font-weight: bold; 
+		font-size: 15pt; 
+		font-family: 'Lato', sans-serif; 
+		padding-top: 10px; 
+		text-decoration: none;
+	}
+	
+	.nav-heading-active {
+		color:green; 
+		font-size: 12.5pt; 
+		font-family: 'Lato', sans-serif; 
+		padding-top: 10px;
+		
+	}
+	
+	.nav-heading-inactive {
+		color:blue; 
+		font-size: 12.5pt; 
+		font-family: 'Lato', sans-serif; 
+		index:1000; 
+		padding-top: 10px;
+	}
+	
+	
+		.port-heading-org {
+		font-size:16pt;
+		font-weight: bold;
+		text-align: right;
+		font-family: 'Lato',sans-serif; 
+		padding: 20px 170px 20px; 
+		line-height: 1.25;
+		background-color: white;
+		color: #333333;
+	}
 	
 	.port-heading {
 		font-size:16pt;
@@ -49,7 +96,18 @@ img.portfolio_images {
 		color: #333333;
 	}	
 	
+
+		.sub-port-heading-org {
+		font-size:14pt; 
+		font-weight: normal;
+		text-align: right;
+		font-family: 'Lato', sans-serif; 
+		background-color: white;
+		color: #333333;
+		padding: 0px 170px;
+	}
 	
+
 	.sub-port-heading {
 		font-size:14pt; 
 		font-weight: normal;
@@ -58,7 +116,8 @@ img.portfolio_images {
 		background-color: white;
 		color: #333333;
 		padding: 0px 20px;
-	}	
+	}
+	
 
 	
   h1 a,
