--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -495,6 +495,15 @@ img.portfolio_images {
 
 @media (max-width:768px){
 	
+		.portfolio-nav	{
+		position: absolute;
+		left: 2%;
+		bottom: -3%;
+			top: auto;
+			z-index: 2000;
+			display: none;
+	}
+	
 	.port-heading{
 		font-size:14pt; 
 		font-weight: bold; 
@@ -628,6 +637,7 @@ img.portfolio_images {
 	  margin: inherit;
    font-size: 7vw;
 	  bottom: 1%;
+	  display: none;
   }
 
 
@@ -648,13 +658,7 @@ img.portfolio_images {
 {width: 80%; max-width: 80%;}
 	
 	
-		.portfolio-nav	{
-		position: absolute;
-		left: 2%;
-		bottom: -3%;
-			top: auto;
-			z-index: 2000;
-	}
+	
 	
 
   .container_one.intro{
