--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -19,6 +19,10 @@
 	  height: 100vh;
 	}
 	
+	.row.nut {
+		width: 90%;
+	}
+	
 	
   h1 a,
   h1 a:visited,
@@ -113,6 +117,7 @@
 
   .col-md-10{
     width:80%;
+	  padding-left: 7vw;
   }
 
   .container_nut{
@@ -140,7 +145,7 @@
   font-size: 18pt;
   letter-spacing: .1em;
   line-height: 1.5;
-	  font-size: 1.5vw;
+	  font-size: 1.25vw;
 	  padding-top: 1%;
     padding-left: 14%;
     padding-right:14%;
@@ -234,6 +239,9 @@
 
 @media (max-width:2024px){
 	
+	.row.nut {
+		width: 100%;
+	}
 
   h1 a:hover,
   h1:hover{
